force-app/main/default/objects/API_Log__c/API_Log__c.object-meta.xml
<CustomObject>
    <label>API Log</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00000000}</displayFormat>
        <label>API Log No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>