force-app/main/default/objects/API_Log__c/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <formula>Today() -   DATEVALUE(  Request_Time__c ) &gt; 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>