force-app/main/default/objects/API_Log__c/fields/Request_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Request_IP_Address__c</fullName>
    <label>Request IP Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>