force-app/main/default/objects/API_Log__c/fields/Response_Body1__c.field-meta.xml
<CustomField>
    <fullName>Response_Body1__c</fullName>
    <label>Response_Body1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>