force-app/main/default/objects/API_Log__c/fields/SATNo__c.field-meta.xml
<CustomField>
    <fullName>SATNo__c</fullName>
    <label>SAT No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>