force-app/main/default/objects/API_Log__c/listViews/All_API_Logs.listView-meta.xml
<ListView>
    <fullName>All_API_Logs</fullName>
    <columns>NAME</columns>
    <columns>Request_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>SATNo__c</columns>
    <columns>PNR__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Request_URL__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Response_Body__c</columns>
    <filterScope>Everything</filterScope>
    <label>All API Logs</label>
</ListView>